fix footer icon cv on mobile

--- a/resources/css/components/footer.scss
+++ b/resources/css/components/footer.scss
@@ -199,16 +199,21 @@
         color: rgba(var(--white-blue-rgba-50));
         text-decoration: none;
         display: inline-block;
-        // @include underlineFill(rgb(var(--blue-rgb)), rgba(var(--white-blue-rgba-25)), 0);
         @include fillSide(rgb(var(--blue-rgb)), 2px, 0);
         margin-top: size(4);
-        margin-left: 22px;
+        margin-left: 28px;
+        @include at_least(tablet) {
+          margin-left: 22px;
+        }
         svg {
           fill: rgba(var(--white-blue-rgba-50));
           display: block;
           position: absolute;
           top: 0;
-          left: -24px;
+          left: -30px;
+          @include at_least(tablet) {
+            left: -24px;
+          }
           padding: size(.5) size(1) size(.5) 2px;
           height: 25px;
           transition: fill .3s ease;
